--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,10 +21,10 @@
 
 en:
   hello: "Hello world"
-  ckeditor:
-      page_title: "CKEditor Files Manager"
-      confirm_delete: "Delete file?"
-      buttons:
-        cancel: "Cancel"
-        upload: "Upload"
-        delete: "Delete"
+  # ckeditor:
+  #     page_title: "CKEditor Files Manager"
+  #     confirm_delete: "Delete file?"
+  #     buttons:
+  #       cancel: "Cancel"
+  #       upload: "Upload"
+  #       delete: "Delete"
